--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
+    "moment": "^2.29.1",
+    "morgan": "^1.10.0",
     "path": "^0.12.7"
   }
 }
