--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
+    "express-session": "^1.17.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7"
   }
 }
