--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.10.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   }
 }
