--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-handlebars": "^5.3.0",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
+    "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
